--- a/app/scss/components/home-page/_new-card.scss
+++ b/app/scss/components/home-page/_new-card.scss
@@ -8,6 +8,10 @@
   border-radius: 5px;
   background-color: $alabaster;
 
+  @include width-823 {
+    max-width: 100%;
+  }
+
   &__name {
     max-width: 180px;
     margin-bottom: 5px;
@@ -17,12 +21,25 @@
     color: $сodGray;
   }
 
+  &__link {
+    transition: transform 0.2s ease;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
   &__sub {
     position: relative;
     z-index: 1;
     max-width: 270px;
     color: $casper;
     @extend %DMS-700;
+    transition: color 0.2s ease;
+
+    &:hover {
+      color: $blueDianne;
+    }
   }
 
   &__wrap {
@@ -32,6 +49,11 @@
     width: 270px;
     max-height: 178px;
     overflow: hidden;
+
+    @include width-823 {
+      bottom: 5px;
+      width: 235px;
+    }
 
     @include width-568 {
       width: 230px;
