--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -15,8 +15,7 @@
     }
 
     @include width-823 {
-      gap: 0;
-      row-gap: 20px;
+      gap: 20px 0;
     }
 
     @include width-568 {
@@ -37,6 +36,10 @@
       max-width: 90%;
     }
 
+    @include width-415 {
+      max-width: 100%;
+    }
+
     &:last-child {
       max-width: 270px;
 
@@ -47,11 +50,19 @@
       @include width-568 {
         max-width: 90%;
       }
+
+      @include width-415 {
+        max-width: 100%;
+      }
     }
   }
 
   &__inner {
     padding-top: 22px;
+
+    @include width-1200 {
+      padding-top: 0;
+    }
   }
 
   &__item {
@@ -76,6 +87,7 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap-reverse;
+    column-gap: 15px;
     min-height: 90px;
 
     @include width-823 {
@@ -85,13 +97,12 @@
 
   &__links {
     display: flex;
-    justify-content: flex-start;
     flex-wrap: wrap;
   }
 
   &__link,
   &__ref {
-    transition: color 0.2s ease-out, border 0.2s ease-out, transform 0.2s ease-out;
+    transition: color 0.2s ease-out, border-color 0.2s ease-out, transform 0.2s ease-out;
     border-bottom: 1px solid transparent;
   }
 
@@ -106,14 +117,18 @@
     position: relative;
   }
 
+  &__elem:not(:first-child) {
+    padding-left: 16px;
+  }
+
   &__elem:not(:last-child) {
-    margin-right: 32px;
+    padding-right: 16px;
   }
 
   &__elem:not(:first-child)::before {
     content: '|';
     position: absolute;
-    left: -15px;
+    left: 0;
   }
 }
 
