--- a/app/scss/components/_news.scss
+++ b/app/scss/components/_news.scss
@@ -10,7 +10,6 @@
       left: 0;
       right: 0;
       bottom: 0;
-      z-index: -1;
       width: 100%;
       height: 170px;
       background-color: $provincialPink;
@@ -61,13 +60,13 @@
     }
   }
 
-
   &__list {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     row-gap: 30px;
     column-gap: 30px;
+    position: relative;
 
     @include width-823 {
       column-gap: 10px;
@@ -97,8 +96,10 @@
   }
 
   &__img {
-    height: 100%;
+    width: 100%;
+    height: 250px;
     object-fit: cover;
+    object-position: center;
     transition: transform 0.3s ease;
 
     &:hover {
@@ -167,7 +168,7 @@
     }
 
     @include width-415 {
-      padding: 5px 0 5px;
+      padding: 5px 0;
     }
   }
 
