--- a/app/scss/components/home-page/_new.scss
+++ b/app/scss/components/home-page/_new.scss
@@ -19,21 +19,35 @@
 
   &__list {
     display: flex;
-    justify-content: flex-start;
     flex-wrap: wrap;
     row-gap: 35px;
     column-gap: 30px;
     margin-bottom: 117px;
 
+    @include width-1200 {
+      margin: 0 auto 117px;
+      max-width: 770px;
+    }
+
     @include width-823 {
       row-gap: 15px;
       column-gap: 10px;
+      margin-bottom: 60px;
     }
   }
 
   &__item {
     max-width: 370px;
     width: 100%;
+
+    @include width-823 {
+      max-width: 100%;
+      flex: 1 1 45%;
+    }
+
+    @include width-568 {
+      flex: 0 1 100%;
+    }
   }
 
   &__video {
