--- a/app/scss/components/shop-page/_shop.scss
+++ b/app/scss/components/shop-page/_shop.scss
@@ -4,6 +4,10 @@
   &__wrapper {
     display: flex;
     padding-bottom: 120px;
+
+    @include width-568 {
+      padding-bottom: 75px;
+    }
   }
 
   &__filters {
@@ -36,6 +40,27 @@
       border-radius: 2px;
       background-color: $casper;
     }
+  }
+}
+
+.filters {
+  @include width-823 {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 20;
+    max-width: 70%;
+    padding: 15px;
+    margin-right: 0;
+    background-color: #f3f3f3;
+    overflow: auto;
+    transform: translateX(-200%);
+    transition: transform 0.3s ease-out;
+  }
+
+  @include width-568 {
+    max-width: 85%;
   }
 }
 
@@ -208,17 +233,27 @@
 
   &__filter {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    column-gap: 30px;
     position: absolute;
     top: -85px;
-    right: 0;
+    left: 0;
     padding: 20px 0 30px;
   }
 
   &__buttons {
     &>:not(:last-child) {
       margin-right: 10px;
+    }
+  }
+
+  &__funnel {
+    svg {
+      width: 20px;
+      height: 15px;
+      fill: $blueDianne;
     }
   }
 
@@ -230,12 +265,19 @@
     }
   }
 
+  &__funnel {
+    display: none;
+
+    @include width-823 {
+      display: inline-block;
+    }
+  }
+
   &__sort,
   &__show {
     .jq-selectbox__select {
       height: 32px;
       padding: 0 30px 0 5px;
-      margin-left: 30px;
       border-color: transparent;
       background: none;
       background-color: #edf1f4;
@@ -269,8 +311,12 @@
     justify-content: flex-start;
     column-gap: 30px;
     flex-wrap: wrap;
-    row-gap: 36px;
+    row-gap: 40px;
     margin-bottom: 102px;
+
+    @include width-568 {
+      margin-bottom: 45px;
+    }
   }
 
   &__item {
@@ -278,6 +324,7 @@
     width: 100%;
   }
 
+  // .shop-catalog__funnel,
   .shop-catalog__btn--active {
     svg {
       fill: $blueDianne;
@@ -298,20 +345,61 @@
     border-radius: 0;
     box-shadow: none;
 
+    @include width-568 {
+      flex-direction: column;
+      align-items: center;
+    }
+
     &__wrap {
       max-width: 370px;
       width: 100%;
       height: 500px;
-      padding: 75px 25px;
+      padding: 75px 20px;
       border: 2px solid #f2f2f2;
       margin-bottom: 0;
-      margin-right: 56px;
+      margin-right: 60px;
+
+      @include width-1200 {
+        max-width: 250px;
+        height: 350px;
+        padding: 20px;
+        margin-right: 20px;
+      }
+
+      @include width-568 {
+        height: 230px;
+        margin-right: 0;
+      }
     }
 
     &__box {
-      padding: 80px 40px 80px 0;
+      padding: 80px 40px 72px 0;
       max-width: initial;
       width: 100%;
+
+      @include width-1200 {
+        padding: 15px;
+      }
+
+      p {
+        display: -webkit-box;
+        margin-bottom: 34px;
+
+        @include width-1200 {
+          margin-bottom: 10px;
+        }
+      }
+    }
+
+    &__name {
+      padding: 0 13px;
+      transform: translateX(-13px);
+      margin-bottom: 16px;
+      font-size: 40px;
+
+      @include width-1200 {
+        font-size: 30px;
+      }
     }
 
     &__name,
@@ -326,22 +414,19 @@
       display: block;
       padding: 0;
       margin-bottom: 33px;
-    }
 
-    &__name {
-      margin-bottom: 6px;
-      font-size: 40px;
+      @include width-1200 {
+        margin-bottom: 10px;
+      }
     }
 
     &__price {
       font-size: 30px;
       margin-bottom: 23px;
-    }
 
-    &__box {
-      p {
-        display: block;
-        margin-bottom: 28px;
+      @include width-1200 {
+        margin-bottom: 5px;
+        font-size: 25px;
       }
     }
 
@@ -356,12 +441,67 @@
     &__tool {
       &:first-child {
         display: none;
+        margin-right: 5px;
+      }
+
+      &:not(:last-child) {
+        margin-right: 15px;
       }
     }
 
     &__toggle {
+      width: 50px;
+      height: 50px;
       border-radius: 0;
-      box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
+      box-shadow: -2px 2px 10px 3px #2525250d;
     }
   }
+}
+
+.filters--active {
+  transform: translateX(0);
+}
+
+.shop-catalog__funnel--active {
+  position: fixed;
+  z-index: 20;
+  top: 15px;
+  right: 3%;
+  width: 50px;
+  height: 50px;
+  background-color: $blueBayoux;
+  border-radius: 50%;
+
+  &::before,
+  &::after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 30px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 2px;
+    
+  }
+  &::before {
+    transform: rotate(45deg) translate(2px);
+  }
+  &::after {
+    transform: rotate(-45deg) translate(2px);
+  }
+
+  svg {
+    display: none;
+  }
+}
+
+.header__overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 12;
+  width: 100vw;
+  height: 100vh;
+  background-color: #00000050;
 }
