--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,3 +25,6 @@
 @import 'components/shop-page/shop';
 @import 'components/pagination';
 
+// about-us
+@import 'components/about-us/experience';
+@import 'components/about-us/team';
