--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -29,6 +29,16 @@
 }
 
 @font-face {
+  font-family: 'Rubik';
+  src: local('Rubik'),
+    url('../fonts/Rubik/Rubik-Bold.woff2') format('woff2'),
+    url('../fonts/Rubik/Rubik-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'DMSans';
   src: local('DMSans'),
     url('../fonts/DMS/DMSans-Regular.woff2') format('woff2'),
