--- a/app/scss/components/_product-card.scss
+++ b/app/scss/components/_product-card.scss
@@ -19,15 +19,15 @@
 
   &:hover {
     .product-card__tools {
-      // я когда через опасити сделал и попробовал с телефона тапнуть по карточке, то попадаешь по ещё прозрачной кнопке
-      // а трансформ бесит, да.
-      transform: translateY(0);
+      transform: scale(1);
+      opacity: 1;
     }
   }
 
   &__wrap {
     height: 210px;
     max-width: 230px;
+    padding-top: 18px;
     margin-bottom: 54px;
 
     @include width-568 {
@@ -55,7 +55,7 @@
   }
 
   &__link {
-    display: inline-block;
+    display: -webkit-box;
     transition: transform 0.2s ease-out;
 
     &:hover {
@@ -85,8 +85,8 @@
     max-width: 165px;
     width: 100%;
     margin: 0 auto;
-    transform: translateY(-300px);
-    transition: transform 0.3s ease;
+    transform: scale(0);
+    transition: transform 0.3s ease, opacity 0.3s ease 0.2s;
 
     svg {
       width: 22px;
