--- a/app/scss/components/shop-page/_shop.scss
+++ b/app/scss/components/shop-page/_shop.scss
@@ -14,10 +14,14 @@
     max-width: 270px;
     width: 100%;
     margin-right: 30px;
+
+    @include width-1200 {
+      margin-right: 15px;
+    }
   }
 
   .partners__slider {
-    padding: 69px 0 63px;
+    padding: 69px 0 80px;
   }
 }
 
@@ -25,6 +29,7 @@
   &__title {
     display: inline-block;
     position: relative;
+    max-width: 200px;
     margin-bottom: 19px;
     @extend %DMS-700;
     font-size: 18px;
@@ -41,9 +46,7 @@
       background-color: $casper;
     }
   }
-}
 
-.filters {
   @include width-823 {
     position: fixed;
     top: 0;
@@ -53,7 +56,7 @@
     max-width: 70%;
     padding: 15px;
     margin-right: 0;
-    background-color: #f3f3f3;
+    background-color: $white;
     overflow: auto;
     transform: translateX(-200%);
     transition: transform 0.3s ease-out;
@@ -64,7 +67,8 @@
   }
 }
 
-.filters-category {
+.filters-category,
+.filters-brand {
   margin-bottom: 49px;
 
   &__label {
@@ -77,15 +81,14 @@
   }
 
   &__input {
-    @extend %sr-only;
-
-    &:checked+.filters-category__checkbox {
+    &:checked+.filters-category__checkbox,
+    &:checked+.filters-brand__checkbox {
       background-color: $mystic;
     }
   }
 
   &__checkbox {
-    padding: 6px 25px 6px 15px;
+    padding: 6px 25px 7px 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -103,6 +106,10 @@
       height: 10px;
     }
   }
+
+  &__name {
+    margin-right: 20px;
+  }
 }
 
 .filters-price {
@@ -117,66 +124,35 @@
   .irs--flat {
     height: 15px;
     margin-bottom: 22px;
-  }
 
-  .irs--flat .irs-line {
-    top: 11px;
-    height: 2px;
-    background-color: #c2d2db;
-  }
 
-  .irs--flat .irs-bar {
-    top: 11px;
-    height: 3px;
-    background-color: $casper;
-  }
+    .irs-line {
+      top: 11px;
+      height: 2px;
+      background-color: #c2d2db;
+    }
 
-  .irs--flat .irs-handle {
-    top: 5px;
-    width: 15px;
-    height: 15px;
-    background-color: $casper;
+    .irs-bar {
+      top: 11px;
+      height: 3px;
+      background-color: $casper;
+    }
 
-    i {
-      display: none;
+    .irs-handle {
+      top: 5px;
+      width: 15px;
+      height: 15px;
+      background-color: $casper;
+
+      i {
+        display: none;
+      }
     }
   }
 }
 
 .filters-brand {
   margin-bottom: 44px;
-
-  &__label {
-    display: block;
-    cursor: pointer;
-
-    &:not(:last-child) {
-      margin-bottom: 1px;
-    }
-  }
-
-  &__input {
-    @extend %sr-only;
-
-    &:checked+.filters-brand__checkbox {
-      background-color: $mystic;
-    }
-  }
-
-  &__checkbox {
-    padding: 6px 25px 6px 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: $white;
-    user-select: none;
-    border-radius: 5px;
-    transition: background-color 0.1s ease;
-
-    &:hover {
-      background-color: #c9ced2;
-    }
-  }
 }
 
 .filters-recent {
@@ -186,7 +162,7 @@
     align-items: center;
 
     &:not(:last-child) {
-      margin-bottom: 16px;
+      margin-bottom: 20px;
     }
   }
 
@@ -204,7 +180,7 @@
   }
 
   &__box {
-    color: #333333;
+    color: $mineShaft2;
   }
 
   &__rate {
@@ -244,7 +220,7 @@
   }
 
   &__buttons {
-    &>:not(:last-child) {
+    &> :not(:last-child) {
       margin-right: 10px;
     }
   }
@@ -275,56 +251,77 @@
 
   &__sort,
   &__show {
-    .jq-selectbox__select {
-      height: 32px;
-      padding: 0 30px 0 5px;
-      border-color: transparent;
-      background: none;
-      background-color: #edf1f4;
-      box-shadow: none;
-      color: $blueDianne;
-      text-shadow: none;
-      transition: background-color 0.3s ease;
+    .jq-selectbox {
+      &__select {
+        position: relative;
+        height: 32px;
+        padding: 0 30px 0 5px;
+        border-color: transparent;
+        border-radius: 4px;
+        background: none;
+        background-color: #edf1f4;
+        box-shadow: none;
+        font: 14px/32px Arial, sans-serif;
+        color: $blueDianne;
+        text-shadow: none;
+        transition: background-color 0.3s ease;
 
-      &:hover {
-        background-color: #c9ced2;
+        &:hover {
+          background-color: #c9ced2;
+        }
       }
-    }
 
-    .jq-selectbox__trigger {
-      border-left: none;
-    }
+      &__trigger {
+        border-left: none;
+      }
 
-    .jq-selectbox__trigger-arrow {
-      position: absolute;
-      top: 12px;
-      right: 9px;
-      width: 10px;
-      height: 5px;
-      border: none;
-      background-image: url('../../images/icons/angle-down.svg');
+      &__trigger-arrow {
+        position: absolute;
+        top: 12px;
+        right: 9px;
+        width: 10px;
+        height: 5px;
+        border: none;
+        background-image: url('../../images/icons/angle-down.svg');
+      }
     }
   }
 
   &__grid {
     display: flex;
     justify-content: flex-start;
-    column-gap: 30px;
     flex-wrap: wrap;
-    row-gap: 40px;
-    margin-bottom: 102px;
+    gap: 40px 30px;
+    margin-bottom: 106px;
+
+    @include width-823{
+      max-width: 520px;
+      margin: 0 auto 106px;
+    }
 
     @include width-568 {
       margin-bottom: 45px;
+      max-width: 270px;
+    }
+
+    @include width-415 {
+      max-width: 100%;
     }
   }
 
   &__item {
     max-width: 270px;
     width: 100%;
+
+    @include width-823 {
+      max-width: 245px;
+    }
+
+    @include width-568 {
+      max-width: 100%;
+    }
   }
 
-  // .shop-catalog__funnel,
   .shop-catalog__btn--active {
     svg {
       fill: $blueDianne;
@@ -332,15 +329,17 @@
   }
 }
 
+// .shop-catalog__funnel,
 .shop-catalog__grid--list {
+  max-width: 100%;
   .shop-catalog__item {
-    max-width: initial;
+    max-width: 100%;
   }
 
   .product-card {
     display: flex;
     justify-content: space-between;
-    max-width: initial;
+    max-width: 100%;
     padding: 0;
     border-radius: 0;
     box-shadow: none;
@@ -363,7 +362,7 @@
         max-width: 250px;
         height: 350px;
         padding: 20px;
-        margin-right: 20px;
+        margin-right: 10px;
       }
 
       @include width-568 {
@@ -374,14 +373,19 @@
 
     &__box {
       padding: 80px 40px 72px 0;
-      max-width: initial;
+      max-width: 100%;
       width: 100%;
 
       @include width-1200 {
+        padding: 5px;
+      }
+
+      @include width-568 {
         padding: 15px;
       }
 
       p {
+        // этому параграфу прописан миксин line-clamp, но потом я прячу этот параграф, и чтобы обратно заработал line-clamp пишу этот префикс) с дисплей блок к сожалению не работает(
         display: -webkit-box;
         margin-bottom: 34px;
 
@@ -407,7 +411,7 @@
       max-height: inherit;
       line-height: 1.2;
       text-align: left;
-      color: #333333;
+      color: $mineShaft2;
     }
 
     &__rate {
@@ -436,6 +440,7 @@
       max-width: 100%;
       width: 100%;
       transform: translate(0);
+      transition: none;
     }
 
     &__tool {
@@ -481,11 +486,13 @@
     margin: 0 auto;
     background-color: #fff;
     border-radius: 2px;
-    
+
   }
+
   &::before {
     transform: rotate(45deg) translate(2px);
   }
+
   &::after {
     transform: rotate(-45deg) translate(2px);
   }
@@ -503,5 +510,5 @@
   z-index: 12;
   width: 100vw;
   height: 100vh;
-  background-color: #00000050;
+  background-color: rgba(#000000, 0.3);
 }
