--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -18,10 +18,16 @@ $halfSpanishWhite: #feefe2;
 $alabaster: #f8f8f8;
 $tundora: #4c4c4c;
 $mystic2: #e6eaf0;
-$lightApricot2: #fcd7b6;
 $comet: #565872;
 $mineShaft2: #333333;
 $rollingStone: #737980;
+$catalinaBlue: #094074;
+$dustyGray: #9a9a9a;
+$dustyGray2: #999999;
+$silverChalice: #9e9e9e;
+$blueBayoux2: #516278;
+$alto: #e0e0e0;
+$mercury: #e5e5e5;
 
 %Rubik-300 {
   font-family: 'Rubik', sans-serif;
