--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -10,8 +10,8 @@
     border-bottom: 1px solid #dae4e9;
     line-height: 1.6;
 
-    &--shop {
-      padding: 64px 0 60px;
+    &--modified {
+      padding: 63px 0 60px;
     }
 
     @include width-1200 {
