--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,6 +1,10 @@
 .header {
   padding: 45px 0 49px;
 
+  @include width-1200 {
+    padding-bottom: 85px;
+  }
+
   @include width-823 {
     padding: 10px 0 30px;
   }
@@ -33,11 +37,13 @@
 
     @include width-1200 {
       justify-content: space-around;
+      align-items: center;
       position: absolute;
       top: 100px;
       right: 0;
       left: 0;
       z-index: 1;
+      height: 80px;
       text-align: center;
       font-size: 20px;
       background-color: $white;
@@ -100,6 +106,10 @@
       color: $white;
     }
 
+    &--modified::after {
+      content: '+';
+    }
+
     &:hover,
     &--current {
       border-color: inherit;
@@ -115,7 +125,7 @@
   &__tools {
     max-width: 320px;
     width: 100%;
-    transition: opacity 0.3s ease;
+    transition: background-color 0.1s linear;
 
     @include width-568 {
       max-width: 100%;
@@ -292,7 +302,7 @@
   position: fixed;
   top: 0;
   z-index: 12;
-  min-height: 70px;
+  max-height: 60px;
   color: $white;
   background-color: rgba($сodGray, 0.8);
 
