--- a/app/scss/components/_news.scss
+++ b/app/scss/components/_news.scss
@@ -17,25 +17,25 @@
   }
 
   &__inner {
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 30px;
+
+    @include width-1200 {
+      margin: 0 auto 60px;
+      max-width: 900px;
+    }
   }
 
   &__title {
     text-align: left;
-    margin: 0 95px 30px 0;
-
-    @include width-568 {
-      margin-bottom: 60px;
-    }
+    margin-bottom: 0;
   }
 
   &__all {
-    position: absolute;
-    bottom: 12px;
-    right: 0;
     max-width: 86px;
     width: 100%;
-    padding-right: 14px;
     @extend %DMS-700;
     transition: text-shadow 0.2s ease, transform 0.2s ease;
 
@@ -48,10 +48,6 @@
       }
     }
 
-    @include width-568 {
-      bottom: -35px;
-    }
-    
     svg {
       width: 6px;
       height: 11px;
@@ -78,129 +74,5 @@
     border-radius: 5px;
     background-color: $white;
     box-shadow: 0 6px 47px 3px rgba(#252525, 0.05);
-  }
-
-  &__wrap {
-    position: relative;
-    height: 250px;
-    margin-bottom: 35px;
-
-    @include width-415 {
-      margin-bottom: 20px;
-    }
-  }
-
-  &__ref {
-    overflow: hidden;
-    border-radius: 5px 5px 0 0;
-  }
-
-  &__img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    object-position: center;
-    transition: transform 0.3s ease;
-
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
-
-  &__sub {
-    display: inline-block;
-    position: absolute;
-    left: 28px;
-    bottom: -13px;
-    max-width: 315px;
-    max-height: 30px;
-    padding: 2px 31px;
-    border-radius: 15px;
-    @extend %Poppins-700;
-    font-size: 14px;
-    text-transform: uppercase;
-    color: $white;
-    background-color: $casper;
-    transition: background-color 0.2s ease-in, color 0.2s ease-out;
-
-    &:hover {
-      background-color: $gray;
-      color: $mineShaft;
-    }
-  }
-
-  &__text {
-    padding: 0 29px;
-
-    @include width-415 {
-      padding: 0 15px;
-    }
-  }
-
-  &__heading {
-    max-width: 340px;
-    min-height: 75px;
-    @extend %DMS-500;
-    font-size: 18px;
-    line-height: 1.2;
-    color: $mineShaft;
-
-    @include width-415 {
-      font-size: 16px;
-    }
-  }
-
-  &__link:hover {
-    text-decoration: underline;
-  }
-
-  &__base {
-    position: relative;
-    padding: 12px 0 7px;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 1px;
-      background-color: #e0e0e0;
-    }
-
-    @include width-415 {
-      padding: 5px 0;
-    }
-  }
-
-  &__date,
-  &__author {
-    display: inline-block;
-    position: relative;
-    width: 49%;
-    padding-left: 10px;
-    font-size: 12px;
-    line-height: 2.5;
-    text-transform: uppercase;
-    color: $ebonyClay;
-
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 10px;
-      width: 7px;
-      height: 10px;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-    }
-  }
-
-  &__date::before {
-    background-image: url('../../images/icons/calendar.svg');
-  }
-
-  &__author::before {
-    background-image: url('../../images/icons/user.svg');
   }
 }
