--- a/app/scss/components/_partners.scss
+++ b/app/scss/components/_partners.scss
@@ -2,7 +2,11 @@
   background-color: $provincialPink;
 
   &__slider {
-    padding: 87px 0 80px;
+    padding: 87px 0 71px;
+
+    &--modified {
+      padding: 69px 0 71px;
+    }
 
     @include width-568 {
       padding: 50px 0;
