--- a/app/scss/components/about-us/_team.scss
+++ b/app/scss/components/about-us/_team.scss
@@ -1,5 +1,5 @@
 .team {
-  padding: 120px 0 107px;
+  padding: 120px 0 47px;
 
   @include width-1200 {
     padding: 80px 0;
@@ -62,6 +62,7 @@
   &__gallery {
     display: flex;
     justify-content: space-between;
+    align-self: flex-start;
     flex-wrap: wrap;
     gap: 40px 0;
     max-width: 770px;
@@ -84,13 +85,13 @@
   &__photo {
     width: 100%;
     height: 320px;
-    object-fit: contain;
+    object-fit: cover;
   }
 
   &__info {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     position: absolute;
     top: 270px;
     left: 0;
