--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -77,3 +77,13 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Poppins';
+  src: local('Poppins'),
+    url('../fonts/Poppins/Poppins-SemiBold.woff2') format('woff2'),
+    url('../fonts/Poppins/Poppins-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
