--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -304,10 +304,10 @@
   z-index: 12;
   max-height: 60px;
   color: $white;
-  background-color: rgba($сodGray, 0.8);
+  background-color: rgba($casper, 0.8);
 
   .header__link {
-    color: $white;
+    color: $mineShaft2;
     line-height: 1.7;
     opacity: 0.8;
 
@@ -335,7 +335,7 @@
   z-index: 12;
   max-width: 100%;
   padding: 10px 15px 7px;
-  background-color: rgba($сodGray, 0.8);
+  background-color: rgba($casper, 0.8);
 
   .header__tool {
     height: 44px;
