--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -28,6 +28,8 @@ $silverChalice: #9e9e9e;
 $blueBayoux2: #516278;
 $alto: #e0e0e0;
 $mercury: #e5e5e5;
+$grayChateau: #a3abb1;
+$wildSand: #f6f6f6;
 
 %Rubik-300 {
   font-family: 'Rubik', sans-serif;
@@ -67,4 +69,9 @@ $mercury: #e5e5e5;
 %Poppins-700 {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
+}
+
+%Poppins-600 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
 }
