--- a/app/scss/components/_filters/_filters-posts.scss
+++ b/app/scss/components/_filters/_filters-posts.scss
@@ -23,8 +23,8 @@
   }
 
   &__img {
-    margin: 0 auto;
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
   }
 
   &__box {
@@ -39,7 +39,7 @@
   }
 
   &__link {
-    display: block;
+    // display: block;
     font-weight: 400;
     transition: transform 0.3s ease;
 
