--- a/app/scss/components/blog/_blog-page.scss
+++ b/app/scss/components/blog/_blog-page.scss
@@ -23,6 +23,14 @@
       justify-content: flex-start;
     }
   }
+  
+  &__filters {
+    max-width: 270px;
+
+    @include width-823 {
+      width: 100%;
+    }
+  }
 
   &__list {
     margin-bottom: 78px;
