--- a/app/scss/components/blog/_comments.scss
+++ b/app/scss/components/blog/_comments.scss
@@ -62,12 +62,24 @@
     font-size: 14px;
     color: $blueBayoux2;
     line-height: 1;
+    border-bottom: 1px solid transparent;
+    transition: color 0.3s ease, border-color 0.3s ease;
+
+    &:hover {
+      color: $portGore;
+      border-color: $portGore;
+
+      svg {
+        fill: $portGore;
+      }
+    }
 
     svg {
       width: 15px;
       height: 15px;
       fill: $blueBayoux2;
       vertical-align: middle;
+      transition: fill 0.3s ease;
     }
   }
 }
